--- a/Index.Html
+++ b/Index.Html
@@ -7,7 +7,7 @@
       <ol>Bronze Premium</ol>
       <ol>Silver Premium</ol>
       <ol>Gold Premimum</ol>
-      <p>These pricing are diffrent tiers fro whatever level bet suties you for your choice of subscription</p>
+      <p>These pricing are diffrent tiers from whatever level bet suties you for your choice of subscription</p>
         <meta charset="utf-8">
         <title>HTML basics</title>
     </head>
