--- a/Index.Html
+++ b/Index.Html
@@ -1,12 +1,12 @@
 !DOCTYPE html>
 <html>
     <head>
-      <h1>Monthly Pricing</h1>44
-      <ol>Standered</ol>
-      <ol>Premium</ol>
-      <ol>Bronze Premium</ol>
-      <ol>Silver Premium</ol>
-      <ol>Gold Premimum</ol>
+      <h1>Monthly Pricing</h1>
+      <ol>Standered-Free</ol>
+      <ol>Premium-$5</ol>
+      <ol>Bronze Premium-$10</ol>
+      <ol>Silver Premium-$15</ol>
+      <ol>Gold Premimum-$20</ol>
       <p>These pricing are diffrent tiers from whatever level bet suties you for your choice of subscription</p>
         <meta charset="utf-8">
         <title>HTML basics</title>
